# gtk-example

./: .gitignore  ChangeLog.md  LICENSE  README.md  gtk-example.cabal  package.yaml  stack.yaml
app/: Main.hs
