name:           gtk-example
version:        0.1.0.0
synopsis:       Example use of GTK
description:    Please see the README on Github at <https://github.com/mpilgrem/gtk-example#readme>
homepage:       https://github.com/mpilgrem/gtk-example#readme
bug-reports:    https://github.com/mpilgrem/gtk-example/issues
author:         Mike Pilgrem
maintainer:     public@pilgrem.com
copyright:      2017 Mike Pilgrem. All rights reserved.
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mpilgrem/gtk-example

executable gtk-example
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gi-gtk
    , haskell-gi-base
  other-modules:
      Paths_gtk_example
  default-language: Haskell2010
